RESOLVED FIXED198226
[macOS] Fix programmatic scroll in RTL overflow with async scrolling enabled
https://bugs.webkit.org/show_bug.cgi?id=198226
Summary [macOS] Fix programmatic scroll in RTL overflow with async scrolling enabled
Simon Fraser (smfr)
Reported 2019-05-24 12:44:32 PDT
[macOS] Fix programmatic scroll in RTL overflow
Attachments
Patch (5.34 KB, patch)
2019-05-24 12:45 PDT, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2019-05-24 12:45:09 PDT
Antti Koivisto
Comment 2 2019-05-24 18:29:06 PDT
Comment on attachment 370581 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370581&action=review > Source/WebCore/ChangeLog:3 > + [macOS] Fix programmatic scroll in RTL overflow *with async scrolling enabled
Radar WebKit Bug Importer
Comment 3 2019-05-24 18:29:22 PDT
Simon Fraser (smfr)
Comment 4 2019-05-25 08:03:00 PDT
Note You need to log in before you can comment on or make changes to this bug.