[macOS] Fix programmatic scroll in RTL overflow with async scrolling enabled https://bugs.webkit.org/show_bug.cgi?id=198226

Reviewed by Antti Koivisto.

Source/WebCore:

On macOS we need to use a scroll offset to set the layer position, not
a scroll position.

Test: scrollingcoordinator/mac/rtl-programmatic-overflow-scroll.html

* page/scrolling/mac/ScrollingTreeOverflowScrollingNodeMac.mm:
(WebCore::ScrollingTreeOverflowScrollingNodeMac::repositionScrollingLayers):

Source/WebCore/../../LayoutTests:

* scrollingcoordinator/mac/rtl-programmatic-overflow-scroll-expected.html: Added.
* scrollingcoordinator/mac/rtl-programmatic-overflow-scroll.html: Added.

Canonical link: https://commits.webkit.org/212295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245771 268f45cc-cd09-0410-ab3c-d52691b4dbfc